@@ -49,7 +49,8 @@ development of new features.
 
 * For Zicht Nieuwe Media Ontwerpers, The Netherlands (http://www.zicht.nl), we
   added the atkShuttleRelation, enhanced the atkFckAttribute and added the
-  autonumbering feature to atkFileAttribute.
+  autonumbering feature to atkFileAttribute. Zicht also sponsored a large part
+  of the atkMlWrapper functionality.
 
 To become a sponsor, please read http://www.achievo.org/support/sponsor.
 
